--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,42 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+    /* LIGHT MODE */
+    --color-light-surface: #f8fafc;
+    --color-white-shade: #f6f6f6;
+    --color-light-text-primary: #0f172a;
+    --color-light-text-secondary: #475569;
+    --color-pri-col: #2563eb;
+    --color-pri-hover: #1d4ed8;
+    --color-accent-col: #60a5fa;
+    --color-light-border: #e2e8f0;
+    --color-light-tint: #eff6ff;
+
+    /* DARK MODE */
+    --color-dark-bg: #0f172a;
+    --color-dark-surface: #1e293b;
+    --color-dark-text-primary: #f8fafc;
+    --color-dark-text-secondary: #cbd5e1;
+    --color-dark-accent: #3b82f6;
+    --color-dark-border: #334155;
+
+    /* SUPPORT COLORS */
+    --color-success: #22c55e;
+    --color-warning: #facc15;
+    --color-danger: #ef4444;
+    --color-neutral: #94a3b8;
+
+}
+
+.container{
+    @apply w-[95%] mx-auto lg:w-[92%] 2xl:w-[60%]
+}
+
+body{
+    @apply bg-white-shade text-light-text-primary
+}
+
+.dark body {
+    @apply bg-dark-bg text-white-shade
+}
