--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,13 @@ body{
     @apply bg-dark-bg text-white-shade
 }
 
-.sign-in-form-label{
+.sign-in-form-label,
+.sign-up-form-label{
     @apply text-sm font-medium
 }
 
-.sign-in-form-input{
+.sign-in-form-input,
+.sign-up-form-input{
     @apply w-full h-10 rounded border border-black/20 outline-0 text-sm px-3 focus:outline-1 outline-pri-col dark:border-white-shade/15
 }
 
