--- a/src/index.css
+++ b/src/index.css
@@ -51,12 +51,19 @@ body{
     @apply w-full h-10 rounded border border-black/20 outline-0 text-xs sm:text-sm px-3 focus:outline-1 outline-pri-col dark:border-white-shade/15 dark:text-white-shade/70
 }
 
+.batchFormInput{
+    @apply w-full h-10 rounded border border-black/20 outline-0 text-xs sm:text-sm px-3 pr-10 focus:outline-1 outline-pri-col dark:border-white-shade/15 dark:text-white-shade/70
+}
+
 .forgot-password{
      @apply text-sm font-medium text-pri-col dark:text-dark-accent
 }
 
 .dark input[type="date"]::-webkit-calendar-picker-indicator {
     filter: invert(1);
+    /* opacity: 0; 
+    position: absolute;
+    right: 0; */
 }
 
 .form-select {
